# huggingface-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  hf-manager.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
